# minimal-serializer

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  minimal-serializer.sln  minimal-serializer.sln.DotSettings
.circleci/: config.yml
MinimalSerializerCSharp/: MinimalSerializerCSharp.csproj
MinimalSerializerCSharp/Source/: Serializer.cs
MinimalSerializerCSharpTest/: DeserializeTest.cs  GetSerializedSizeTest.cs  MinimalSerializerCSharpTest.csproj  SerializeTest.cs  SerializerTest.cs  TestTypes.cs
docker/dev-alpine/: Dockerfile
docker/dev-ubuntu/: Dockerfile
documents/: benchmark.md  serialization.md  serializer.md
minimal_serializer_cpp/: CMakeLists.txt  minimal_serializer_cpp.vcxproj
minimal_serializer_cpp/include/minimal_serializer/: fixed_string.hpp  serializer.hpp  string_utility.hpp  type_traits.hpp
minimal_serializer_cpp_benchmark/: minimal_serializer_cpp_benchmark.vcxproj  minimal_serializer_cpp_benchmark.vcxproj.filters
minimal_serializer_cpp_benchmark/source/: main.cpp
minimal_serializer_cpp_test/: CMakeLists.txt  fixed_string_test.cpp  main.cpp  minimal_serializer_cpp_test.vcxproj  minimal_serializer_cpp_test.vcxproj.filters  serialize_test.cpp  serialize_test_types.hpp  string_utility_test.cpp  type_traits_test.cpp
